--- a/manifests/nginx.yaml
+++ b/manifests/nginx.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
-  namespace: demo-app
+  namespace: argo-demo
   labels:
     app.kubernetes.io/name: nginx
 spec:
@@ -20,4 +20,4 @@ spec:
         image: nginx:latest
         ports:
           - name: http
-            containerPort: 80
+            containerPort: 8081
