adds cluster destinations and sync policies

--- a/apps/another-nginx-service.yaml
+++ b/apps/another-nginx-service.yaml
@@ -11,3 +11,11 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: http
+  destination:
+    namespace: applications
+    name: k3d-davetron-labs-mbp-worker
+  syncPolicy:
+    automated: {}
+    syncOptions:
+      - CreateNamespace=true
+      - ServerSideApply=true
