--- a/apps/another-nginx.yaml
+++ b/apps/another-nginx.yaml
@@ -21,3 +21,11 @@ spec:
         ports:
           - name: http
             containerPort: 80
+  destination:
+    namespace: applications
+    name: k3d-davetron-labs-mbp-worker
+  syncPolicy:
+    automated: {}
+    syncOptions:
+      - CreateNamespace=true
+      - ServerSideApply=true
