--- a/apps/another-nginx-service.yaml
+++ b/apps/another-nginx-service.yaml
@@ -13,7 +13,7 @@ spec:
       targetPort: http
   destination:
     namespace: applications
-    name: k3d-davetron-labs-mbp-worker
+    server: k3d-davetron-labs-mbp-worker
   syncPolicy:
     automated: {}
     syncOptions:
