--- a/helm/datadog-agent/values.yaml
+++ b/helm/datadog-agent/values.yaml
@@ -1,5 +1,5 @@
 datadog:
-  apiKeyExistingSecret: datadog-secret
+  apiKeyExistingSecret: datadog-agent
   site: datadoghq.com
   clusterName: k3d-davetron-labs-mbp-02
   tags:
