quotation marks after all?

--- a/helm/datadog-agent/values.yaml
+++ b/helm/datadog-agent/values.yaml
@@ -1,5 +1,5 @@
 datadog:
-  apiKeyExistingSecret: datadog-agent
+  apiKeyExistingSecret: "datadog-agent"
   site: datadoghq.com
   clusterName: k3d-davetron-labs-mbp-02
   tags:
