fix controller server

--- a/helm/datadog-agent/values.yaml
+++ b/helm/datadog-agent/values.yaml
@@ -15,7 +15,7 @@ datadog:
         - datadog-agent-cluster-agent
       init_config:
       instance:
-        - app_controller_endpoint: https://localhost:8082/metricsi
+        - app_controller_endpoint: https://localhost:8082/metrics
   logs:
     enabled: true
     containerCollectAll: true
