god I hope this is really the thing

--- a/helm/argocd/values.yaml
+++ b/helm/argocd/values.yaml
@@ -8,15 +8,11 @@ argo-cd:
   server:
     extraArgs:
       - --insecure
-    metadata:
-      annotations:
-        ad.datadoghq.com/argocd-server.checks: '{"argocd": {"init_config": {},"instances": [{"api_server_endpoint": "http://%%host%%:8083/metrics"}]}}'
+    podAnnotations:
+      ad.datadoghq.com/argocd-server.checks: '{"argocd": {"init_config": {},"instances": [{"api_server_endpoint": "http://%%host%%:8083/metrics"}]}}'
   controller:
-    metadata:
-      annotations:
-        ad.datadoghq.com/argocd-application-controller.checks: '{"argocd": {"init_config": {},"instances": [{"app_controller_endpoint": "http://%%host%%:8082/metrics"}]}}'
-  server:
+    podAnnotations:
+      ad.datadoghq.com/argocd-application-controller.checks: '{"argocd": {"init_config": {},"instances": [{"app_controller_endpoint": "http://%%host%%:8082/metrics"}]}}'
   repoServer:
-    metadata:
-      annotations:
-        ad.datadoghq.com/argocd-repo-server.checks: '{"argocd": {"init_config": {},"instances": [{"repo_server_endpoint": "http://%%host%%:8084/metrics"}]}}'
+    podAnnotations:
+      ad.datadoghq.com/argocd-repo-server.checks: '{"argocd": {"init_config": {},"instances": [{"repo_server_endpoint": "http://%%host%%:8084/metrics"}]}}'
