--- a/helm/datadog-agent/Chart.yaml
+++ b/helm/datadog-agent/Chart.yaml
@@ -7,7 +7,7 @@ type: application
 version: 0.1.0
 
 # NOTE: this is the version of the app being deployed. It is NOT the same as the chart version. be careful with this.
-appVersion: "1.0"
+appVersion: 1.0
 
 dependencies:
 - name: datadog
