--- a/helm/datadog-agent/values.yaml
+++ b/helm/datadog-agent/values.yaml
@@ -26,3 +26,5 @@ clusterAgent:
         - app_controller_endpoint: http://%%host%%:8082/metrics
         - api_server_endpoint: http://%%host%%:8083/metrics
         - repo_server_endpoint: http://%%host%%:8084/metrics
+agents:
+  enabled: true
