--- a/helm/datadog-agent/values.yaml
+++ b/helm/datadog-agent/values.yaml
@@ -2,11 +2,11 @@ datadog:
   apiKeyExistingSecret: datadog-secret
   site: datadoghq.com
   clusterName: k3d-davetron-labs-mbp-06
+  agents:
+    enabled: true
   processAgent:
     enabled: true
     processCollection: true
-  clusterChecks:
-    enabled: true
   logs:
     enabled: true
     containerCollectAll: true
