--- a/helm/datadog-agent/values.yaml
+++ b/helm/datadog-agent/values.yaml
@@ -1,9 +1,12 @@
 datadog:
-  apiKeyExistingSecret: datadog
+  apiKeyExistingSecret: datadog-secret
   site: datadoghq.com
   clusterName: k3d-davetron-labs-mbp-06
   agents:
     enabled: true
+  clusterAgent:
+    enabled: true
+    tokenExistingSecret: datadog-cluster-agent
   processAgent:
     enabled: true
     processCollection: true
