--- a/helm/datadog-agent/Chart.yaml
+++ b/helm/datadog-agent/Chart.yaml
@@ -1,12 +1,18 @@
-apiVersion: v2 
+---
+apiVersion: v1
 name: datadog
-description: Installs the datadog-cluster-agent via helm 
-type: application
-version: 0.1.0
-
-appVersion: "1.0"
-
-dependencies:
-- name: datadog
-  version: 3.109.2
-  repository: https://helm.datadoghq.com
+version: 3.109.2
+appVersion: "7"
+description: Datadog Agent
+keywords:
+  - monitoring
+  - alerting
+  - metric
+home: https://www.datadoghq.com
+icon: https://datadog-live.imgix.net/img/dd_logo_70x75.png
+sources:
+  - https://app.datadoghq.com/account/settings#agent/kubernetes
+  - https://github.com/DataDog/datadog-agent
+maintainers:
+  - name: Datadog
+    email: support@datadoghq.com
